# landing-optimization-framework

./: CMakeLists.txt  README.md
Common/: CMAOptimizer.cpp  CMAOptimizer.h  CMakeLists.txt  CommonDLL.h  RegisterTypes_dropCommon.cpp  RegisterTypes_dropCommon.h
InitialFiles/: AshbyModelv8_twoConstraints.osim  DesiredKinematics.sto  InitialControllerParameters.sto  InitialControllerSet.xml  InputDropModel_original.osim  InputDropModel_posed.osim  LastSimulatedStates.sto  bestControllers.xml  bestModel.osim  optimizedControllers.xml  optimizedModel.osim
explore_control/: CMakeLists.txt  explore_control.cpp
nodal/: CMakeLists.txt  dropLandingSim.cpp
