SET(KIT Common)
SET(UKIT COMMON)

# Define project
SET(DROP_COMMON_LIBRARY_NAME drop${KIT})
SET(DROP_COMMON_AUTHORS  "Matt_DeMers") 

ADD_DEFINITIONS(-DDROP_COMMON_LIBRARY_NAME=${DROP_COMMON_LIBRARY_NAME}
-DDROP_COMMON_AUTHORS="${DROP_COMMON_AUTHORS}"
-DDROP_COMMON_TYPE="Shared")

FILE(GLOB SOURCE_FILES *.cpp *.c)
FILE(GLOB INCLUDE_FILES *.h)
SET_SOURCE_FILES_PROPERTIES( ${CMAKE_SOURCE_DIR}/Common/cmaes.c PROPERTIES LANGUAGE CXX )

SET(EXPORT_MACRO DROP${UKIT}_EXPORTS)

LINK_LIBRARIES(${OSIM_LIBRARIES} ${SIMTK_COMMON_LIB} ${SIMTK_MATH_LIB} ${MATH_LIBS_TO_USE} ${MPI_LIBRARIES})
ADD_LIBRARY(drop${KIT} SHARED ${SOURCE_FILES} ${INCLUDE_FILES}) 

SET_TARGET_PROPERTIES(drop${KIT} PROPERTIES
   DEFINE_SYMBOL ${EXPORT_MACRO}
   PROJECT_LABEL "Libraries - drop${KIT}"
)